5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1728_2499.log
== TEST (2019-05-15 13:17:23) 
-- CODE:
import math from factorial
k = int(input("Digite um numero natural: "))
e = 0
soma = 0
while( e < k):
	soma = soma + ((1) / (factorial(e)))
	e = e +1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 1
    import math from factorial
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:17:38) 
-- CODE:
import math from* 
k = int(input("Digite um numero natural: "))
e = 0
soma = 0
while( e < k):
	soma = soma + ((1) / (factorial(e)))
	e = e +1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 1
    import math from* 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:17:54) 
-- CODE:
from math import*
k = int(input("Digite um numero natural: "))
e = 0
soma = 0
while( e < k):
	soma = soma + ((1) / (factorial(e)))
	e = e +1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:18:09) 
-- CODE:
from math import*
k = int(input("Digite um numero natural: "))
e = 0
soma = 0
while( e < k):
	soma = soma + ((1) / (factorial(e)))
	e = e +1
print(round(soma, 8))
-- EXECUTION TIME:
0.218469
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
